Div del productos completado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             
-            <div class="col-m-10 col-l-7" style="background-color:blueviolet;">
+            <div class="col-m-10 col-l-7">
                 <div include-html="partials/products.html">
                     
                 </div>
