Aside y footer. Todo entorno visual terminado.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-            <div class="col-m-12 col-l-3" style="background-color:coral;">
+            <div class="col-m-12 col-l-3">
                 <div include-html="partials/aside.html">
                     
                 </div>
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <footer>&copy; Leo Quiroga</footer>
+    <div include-html="partials/footer.html"></div>
 
     <script src="js/include-html.js"></script>
 </body>
